# QuickClawApp

./: .env.example  .gitignore  FRONTEND-FIXES-PLAN.md  GOOGLE_PLAY_GUIDE.md  KVM_SESSION_NOTES.md  MULTI-AGENT-REPORT.md  app.config.js  app.json  eas.json  flutter-vs-react-native-report.md  global.css  lightpanda-cdp-adapter.js  openclaw-illustrations-prompt.json  package-lock.json  package.json  restore-skills.mjs  tailwind.config.js  test-agent-chat.mjs  test-agents-integration.mjs  test-full-flow.mjs  test-quick.mjs
.github/workflows/: desktop-build.yml
app/: _layout.tsx  index.tsx
simpleclaw-backend/: SERVER_CHECKLIST.md  manage.py  requirements.txt
simpleclaw-backend/clawdmatrix/: PLAN-native-skills.md
simpleclaw-desktop/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
simpleclaw-desktop/src-tauri/: Cargo.toml  tauri.conf.json
simpleclaw-desktop/src-tauri/capabilities/: default.json
simpleclaw-desktop/src-tauri/icons/: icon.icns
simpleclaw-desktop/src-tauri/src/: config.rs  lib.rs  main.rs
simpleclaw-desktop/src-tauri/src/commands/: backend.rs  docker.rs  mod.rs  setup.rs  status.rs  telegram.rs
simpleclaw-rn/: GOOGLE_PLAY_GUIDE.md  app.json  eas.json  package-lock.json  package.json  tailwind.config.js
simpleclaw-rn-foreign/: GUIDE-RN-XCODE-EXPO-CLAUDE.md  REPORT.md  app.config.js  app.json  eas.json  package-lock.json  package.json  tailwind.config.js
simpleclaw-rn/app/: index.tsx  (+1 more)
simpleclaw-ru/: index.html  package-lock.json  package.json
simpleclaw_mobile/: README.md  analysis_options.yaml  pubspec.yaml
(+372 files in other folders)
