[package]
name = "simpleclaw-desktop"
version = "0.1.0"
description = "SimpleClaw Desktop — local OpenClaw installer"
authors = ["SimpleClaw"]
edition = "2021"

[lib]
name = "simpleclaw_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
dirs = "6"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"

[features]
custom-protocol = ["tauri/custom-protocol"]
